Misc CSS fixes and tidying (#130)
Fix in-page images overflowing text (#122)
Fix hero background (#114, #116)
FIx column dark mode background (#116)

--- a/src/css/birdbox-protocol-overrides.scss
+++ b/src/css/birdbox-protocol-overrides.scss
@@ -6,20 +6,12 @@
 
 @import '~@mozilla-protocol/core/protocol/css/includes/lib';
 
-figcaption {
-    margin-top: $spacing-md;
-    @include text-body-sm;
-}
-
-figure {
-    text-align: center;
-}
-
 // Bring the errorlist closer to the field it's related to
 .mzp-c-field.mzp-is-error {
     input, textarea, select {
         margin-bottom: $spacing-xs;
     }
+
     ul.errorlist {
         margin-bottom: $spacing-lg;
     }
@@ -35,7 +27,6 @@ figure {
         @include hidden;
     }
 }
-
 
 .mzp-c-newsletter .mzp-c-newsletter-thanks {
     display: block;
