--- a/src/css/captioned-image.scss
+++ b/src/css/captioned-image.scss
@@ -5,9 +5,6 @@
 @import '~@mozilla-protocol/core/protocol/css/includes/lib';
 
 .bb-captioned-image {
-    align-items: center;
-    display: flex;
-    height: 150px;
     margin: $spacing-lg 0;
     text-align: center;
 
