--- a/src/css/pre-protocol/pagination.scss
+++ b/src/css/pre-protocol/pagination.scss
@@ -7,7 +7,6 @@
 @import '~@mozilla-protocol/core/protocol/css/includes/lib';
 
 .pagination {
-
     @include text-body-sm;
     margin: $spacing-lg 0;
     text-align: center;
@@ -18,21 +17,20 @@
 
     a,
     .current {
-        background: #fff;
-        // border: 2px solid #000;
         margin: 0 $spacing-xs;
         padding: $spacing-sm $spacing-md;
         text-decoration: none;
+
         &:hover,
         &:focus {
-            background: #e3e3e3;
+            background: $color-light-gray-20;
             font-weight: bold;
-            border-bottom: $spacing-xs solid $color-black
+            border-bottom: $spacing-xs solid $color-black;
         }
     }
 
     .current{
         font-weight: bold;
-        border-bottom: $spacing-xs solid $color-black
+        border-bottom: $spacing-xs solid $color-black;
     }
 }
